--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
             width: 100%;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17050977415">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17050977415');
+</script>
 </head>
 <body>
     <header>
